fix: fixed colum-gap in footer

--- a/plants/sass/components/_footer.scss
+++ b/plants/sass/components/_footer.scss
@@ -24,6 +24,7 @@
 
   &__data {
     @include flex-parent($justify-content: start);
+    column-gap: 20px;
 
     @include media-netbook {
       line-height: 24px;
